--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -114,6 +114,7 @@ $font-family-serif:      Georgia, Cambria, "Times New Roman", Times, serif;
   //   font-size: 0.688em;
   // }
 
+  &-primary,
   &-secondary,
   &-secondary:hover,
   &-warning,
