fixed light buttons

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,6 +43,9 @@ html {
           color: $white;
           font-weight: normal;
           text-decoration: none;
+          &-light {
+            color: $black;
+          }
         }
       }
       .container-fluid {
