added chalice special event

--- a/app/assets/stylesheets/react-table.scss
+++ b/app/assets/stylesheets/react-table.scss
@@ -403,3 +403,14 @@
 	cursor: col-resize;
 	user-select: none;
 }
+
+// custom styles
+// =====================
+
+.rt-td {
+	span {
+		&:hover {
+			cursor: pointer;
+		}
+	}
+}
