--- a/app/views/admin/competition_players/index.html.erb
+++ b/app/views/admin/competition_players/index.html.erb
@@ -3,7 +3,7 @@
     <% if @players.length > 0 %>
       <% @players.each do |player| %>
         <p>
-          <%= player.player.name %>
+          <%= player.player.name %> <%= link_to '(Edit)', edit_admin_competition_competition_player_path(@competition, player) %>
         </p>
       <% end %>
     <% else %>
