--- a/app/views/leagues/join.html.erb
+++ b/app/views/leagues/join.html.erb
@@ -1,6 +1,9 @@
 <div class="row">
   <div class="col-md-8 offset-md-2">
     <div id="league-info">
+      <p>
+        <%= link_to '< Back to League', game_competition_league_path(@game, @competition, @league) %>
+      </p>
       <span>
         Join League For
       </span>
