fixing special event join flow

--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -8,6 +8,9 @@
       <% when 'pick_x' %>
         <%= render 'pick_x_info' %>
         <%= render 'pick_x' %>
+      <% when 'special' %>
+        <%= render 'pick_x_info' %>
+        <%= render 'pick_x' %>
       <% end %>
     </div>
   </div>
