--- a/app/views/leagues/_pick_x_info.html.erb
+++ b/app/views/leagues/_pick_x_info.html.erb
@@ -23,7 +23,7 @@
     </p>
   <% end %>
   <p>
-    <strong>Draft Type:</strong> <%= @league.draft_type.humanize.titleize %>
+    <strong>Draft Type:</strong> <%= @league.draft_type  == 'special' ? "Pick X" : @league.draft_type.humanize.titleize %>
   </p>
   <p>
     <strong>Entry:</strong> Free
