--- a/app/views/leagues/new.html.erb
+++ b/app/views/leagues/new.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-8 offset-md-2">
     <h2><%= @competition.name %></h2>
     <p>
-      A single-event league is an easy way to play <strong>Fantasy Pro Tour</strong>. Looking for something a little more involved? Check out our <%= link_to 'season-long leagues', new_game_season_league_path(@game, @competition.season) %>!
+      A single-event league is an easy way to play <strong>Fantasy Pro Tour</strong>. Looking for something a little more involved? Check out our <%= link_to 'season-long leagues', new_game_season_league_path(@game, Season.where(game_id: 1).order(start_date: :desc).first) %>!
     </p>
     <p>
       <strong>Date:</strong> <%= @competition.start_date.localtime.strftime("%m/%d/%Y") %>
