--- a/app/views/leagues/join.html.erb
+++ b/app/views/leagues/join.html.erb
@@ -39,7 +39,7 @@
             <button type="button" class="btn btn-secondary btn-sm btn-more-info" data-toggle="modal" data-target="#support-a-player-modal">
               ?
             </button>
-            <%= select_tag "team[supporting]", options_for_select([["Kenji Egashira", "kenji_egashira"], ["Josh Lee Kwai", "josh_lee_kwai"], ["Josh Lee Kwai", "josh_lee_kwai"], ["The Professor", "the_professor"], ["Michelle Rapp", "michelle_rapp"], ["Ashlen Rose", "ashlen_rose"], ["Gerry Thompson", "gerry_thompson"], ["James Turner", "james_turner"], ], session[:referral_code]), required: false, include_blank: "Select Player to Support", class: "form-control" %>
+            <%= select_tag "team[supporting]", options_for_select([["Kenji Egashira", "kenji_egashira"], ["Josh Lee Kwai", "josh_lee_kwai"], ["The Professor", "the_professor"], ["Michelle Rapp", "michelle_rapp"], ["Ashlen Rose", "ashlen_rose"], ["Gerry Thompson", "gerry_thompson"], ["James Turner", "james_turner"], ["Chris VanMeter", "chris_vanmeter"]], session[:referral_code]), required: false, include_blank: "Select Player to Support", class: "form-control" %>
           </div>
           <div id="support-a-player-modal" class="modal" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
