--- a/app/views/leagues/join.html.erb
+++ b/app/views/leagues/join.html.erb
@@ -35,7 +35,7 @@
         </div>
         <% if @league.draft_type == 'special' %>
           <div class="form-group">
-            <%= label_tag 'team[supporting]', "Support a Player", class: "control-label" %>
+            <%= label_tag 'team[supporting]', "Support a Player", class: "control-label" %> (Optional)
             <button type="button" class="btn btn-secondary btn-sm btn-more-info" data-toggle="modal" data-target="#support-a-player-modal">
               ?
             </button>
