--- a/app/views/admin/competitions/edit.html.erb
+++ b/app/views/admin/competitions/edit.html.erb
@@ -27,6 +27,10 @@
         <%= f.text_field :slug, required: true, class: "form-control" %>
       </div>
       <div class="form-group required">
+        <%= f.label :about, "About", class: "control-label" %>
+        <%= f.text_area :about, required: true, class: "form-control" %>
+      </div>
+      <div class="form-group required">
         <%= f.label :score_as_of_round, "Score as of Round", class: "control-label" %>
         <%= f.number_field :score_as_of_round, min: 0, max: 16, required: true, class: "form-control" %>
       </div>
