--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -101,13 +101,24 @@
             <div class="cta-text-container">
               <h3>Upcoming Events</h3>
               <div class="event-container">
-                <p class="event-button">Grand Prix Montreal (October 6-7)</p>
+                <a href="/games/mtg/competitions/ckchalice18/leagues" class="homepage-event-link">
+                  <p class="event-button">The Chalice (October 20-21)</p>
+                </a>
               </div>
               <div class="event-container">
-                <p class="event-button">Grand Prix Mexico City (October 6-7)</p>
+                <a href="/games/mtg/competitions/gpnj18/leagues" class="homepage-event-link">
+                  <p class="event-button">Grand Prix New Jersey (October 27-28)</p>
+                </a>
               </div>
               <div class="event-container">
-                <p class="event-button">Pro Tour Guilds of Ravnica (November 9-11)</p>
+                <a href="/games/mtg/competitions/gplille18/leagues" class="homepage-event-link">
+                  <p class="event-button">Grand Prix Lille (October 27-28)</p>
+                </a>
+              </div>
+              <div class="event-container">
+                <a href="/games/mtg/competitions/ptgrn/leagues" class="homepage-event-link">
+                  <p class="event-button">Pro Tour Guilds of Ravnica (November 9-11)</p>
+                </a>
               </div>
             </div>
           </div>
