public leagues now viewable without signing in, slight redesign of special league view

--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -9,8 +9,8 @@
         <%= render 'pick_x_info' %>
         <%= render 'pick_x' %>
       <% when 'special' %>
-        <%= render 'pick_x_info' %>
-        <%= render 'pick_x' %>
+        <%= render 'special_info' %>
+        <%= render 'special' %>
       <% end %>
     </div>
   </div>
