--- a/app/views/leagues/_special.html.erb
+++ b/app/views/leagues/_special.html.erb
@@ -46,6 +46,9 @@
           <th>
             Name
           </th>
+          <th>
+            Supporting
+          </th>
         </tr>
       </thead>
       <tbody>
@@ -53,6 +56,9 @@
           <tr>
             <td>
               <%= league_user.team.name %>
+            </td>
+            <td>
+              <%= league_user.team.supporting&.humanize&.titleize %>
             </td>
           </tr>
         <% end %>
