added card kingdom display if no supporting player

--- a/app/views/leagues/_special.html.erb
+++ b/app/views/leagues/_special.html.erb
@@ -58,7 +58,11 @@
               <%= league_user.team.name %>
             </td>
             <td>
-              <%= league_user.team.supporting&.humanize&.titleize %>
+              <% if league_user.team.supporting.blank? %>
+               Card Kingdom
+              <% else %>
+                <%= league_user.team.supporting&.humanize&.titleize %>
+              <% end %>
             </td>
           </tr>
         <% end %>
