--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -203,12 +203,12 @@
     <% elsif Time.now > @competition.end_date %>
       <h2> This competition has ended!</h2>
       <p>
-        But there are <%= link_to 'plent of other leagues you can join!', game_competitions_path(@game) %>
+        But there are <%= link_to 'plenty of other leagues you can join!', game_competitions_path(@game) %>
       </p>
     <% else %>
       <h2> This competition has already started!</h2>
       <p>
-        But there are <%= link_to 'plent of other leagues you can join!', game_competitions_path(@game) %>
+        But there are <%= link_to 'plenty of other leagues you can join!', game_competitions_path(@game) %>
       </p>
     <% end %>
   </div>
