card model and import

--- a/app/views/admin/dashboard/dashboard.html.erb
+++ b/app/views/admin/dashboard/dashboard.html.erb
@@ -13,5 +13,8 @@
     <p>
       <%= link_to "Create Season", new_admin_season_path, class: 'btn btn-primary' %>
     </p>
+    <p>
+      <%= link_to "Add Cards", new_admin_card_path, class: 'btn btn-primary' %>
+    </p>
   </div>
 </div>
