--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -101,18 +101,13 @@
             <div class="cta-text-container">
               <h3>Upcoming Events</h3>
               <div class="event-container">
-                <a href="/games/mtg/competitions/ckchalice18/leagues" class="homepage-event-link">
-                  <p class="event-button">The Chalice (October 20-21)</p>
+                <a href="/games/mtg/competitions/ew18vintage/leagues" class="homepage-event-link">
+                  <p class="event-button">Eternal Weekend Vintage (November 2-4)</p>
                 </a>
               </div>
               <div class="event-container">
-                <a href="/games/mtg/competitions/gpnewjersey18/leagues" class="homepage-event-link">
-                  <p class="event-button">Grand Prix New Jersey (October 27-28)</p>
-                </a>
-              </div>
-              <div class="event-container">
-                <a href="/games/mtg/competitions/gplille18/leagues" class="homepage-event-link">
-                  <p class="event-button">Grand Prix Lille (October 27-28)</p>
+                <a href="/games/mtg/competitions/ew18legacy/leagues" class="homepage-event-link">
+                  <p class="event-button">Eternal Weekend Legacy (November 3-4)</p>
                 </a>
               </div>
               <div class="event-container">
